echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  labels:
    app: echo-app
spec:
  selector:
    app: echo-app
  type: NodePort
  ports:
    - port: 80
      targetPort: 5678
      nodePort: 30080
